...
            </ThemeConsumer >
        )
    }
    return (
        <View style={{ paddingBottom: 10, }}>
            <VirtualizedList
                testID='virtualist'
                horizontal={bool}
                renderItem={({ item }) => {
                    let searchval = search.toLowerCase().replace(/\s/, "")
                    let outval = (item.name).toLowerCase().replace(/\s/, "")
                    if (outval.includes(searchval)) {
                        return (
...
