...

    return (
        <ThemeConsumer>
            {({ theme }) => (
                <>
                    <AppHeader name={"Home"} />
                    <View testID='homeScreenMainView' style={theme.HomeScreenStyles.container}>
                        <View style={theme.HomeScreenStyles.searchContainer}>
                            <SearchBar testID='searchBar' scrollEnabled placeholder="Search Recipes ..." onChangeText={searchFunc} value={search} round lightTheme containerStyle={theme.HomeScreenStyles.searchContainerStyle} inputContainerStyle={theme.CategoriesStyles.searchInpStyle} />
                            <SpeechRecognition setContent={searchFunc} />
                        </View>
                        <ScrollView testID='scrollPointView'>
                            <View style={theme.HomeScreenStyles.caroselContainer}>
                                {/* carosel file */}
                                <Carosel />
                            </View>
                            <View style={theme.HomeScreenStyles.mainContainer}>
                                <View style={theme.HomeScreenStyles.recentView}>
...
